# pythonProjects

./: README.md  pyproject.toml  requirements.txt
clockin/: globals.py  main.py  schemas.py
clockin/db_config/: models.py  utils.py
clockin/logs/: exception_handler.py  logger.py
clockin/services/: clockin_service.py  item_service.py
clockin/stores/: clockin.py  items.py
clockin/utils/: common_utils.py
