[tool.poetry]
name = "Clockin"
version = "1.0.0"
license = ""
description = ""
readme = "README.md"
authors = ["Developer <nandannanda070@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "^0.114.1", extras = ["standard"]}
uvicorn = "0.22.0"
pymongo = "4.5.0"
motor = "3.5.3"
python-decouple = "3.8"
pytz = "2024.2"